Set up of availableProductsInWarehouse Model, Controller, Routes and add the necessary documentation in swagger.json for the corresponding endpoint
