# src/routes/availableProductsInWarehouseRoutes.js
@@ -1,0 +1,11 @@
+const express = require('express');
+
+const {
+    getCurrentInventoryForWarehouse,
+} = require('../controllers/availableProductsInWarehouseController');
+
+const router = express.Router();
+
+router.get('/:id', getCurrentInventoryForWarehouse);
+
+module.exports = router;
